# kortex

./: README.md  RELEASE_NOTES.md  index.html  package.json  vite.config.ts
.github/workflows/: build.yml
src/: index.css  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_manager.rs  lib.rs  process_monitor.rs  resolution_manager.rs
src/components/: process-picker.tsx  resolution-picker.tsx  theme-provider.tsx
src/lib/: store.ts
src/routes/: __root.tsx  index.tsx  logs.tsx  manual.tsx  mouse-lock.tsx  profiles.tsx  res.tsx  rules.tsx  settings.tsx
