[package]
name = "kortex"
version = "0.5.0"
description = "Dynamic resolution switching based on active process"
authors = ["teyd"]
license = "MIT"
repository = "https://github.com/teyd/kortex"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
sysinfo = "0.36.1"
windows = { version = "0.61.3", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }
tauri-plugin-single-instance = "2.3.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
